<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curtains"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ageImageView"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/faceView"
            android:layout_width="@dimen/face_view_width"
            android:layout_height="@dimen/face_view_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/face1" />

        <ImageView
            android:id="@+id/eyeView"
            android:layout_width="@dimen/eye_view_width"
            android:layout_height="@dimen/eye_view_height"
            android:layout_alignBottom="@id/faceView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/eye_view_margin_bottom"
            android:src="@drawable/eye1" />

        <ImageView
            android:id="@+id/hairView"
            android:layout_width="@dimen/hair_view_width"
            android:layout_height="@dimen/hair_view_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hair1" />

        <ImageView
            android:id="@+id/clothView"
            android:layout_width="@dimen/cloth_view_width"
            android:layout_height="@dimen/cloth_view_height"
            android:layout_alignTop="@+id/eyeView"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cloth1" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:background="@drawable/round_rect_purple_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avatar_room_eye"
            android:textColor="@color/powerup_black"
            android:textSize="@dimen/hair_eyes_face_clothes"/>

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_room_height"
            android:src="@drawable/eye1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/eyeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_white_18dp" />

            <ImageButton
                android:id="@+id/eyeRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_white_18dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_marginRight="@dimen/linear_layout_margin_right"
        android:background="@drawable/round_rect_pink_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avatar_room_hair"
            android:textColor="@color/powerup_black"
            android:textSize="@dimen/hair_eyes_face_clothes"/>

        <ImageView
            android:id="@+id/hair"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_room_height"
            android:src="@drawable/hair1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/hairLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_white_18dp" />

            <ImageButton
                android:id="@+id/hairRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_white_18dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        android:layout_above="@+id/continueButtonAvatar"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:background="@drawable/round_rect_yellow_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avatar_room_face"
            android:textColor="@color/powerup_black"
            android:textSize="@dimen/hair_eyes_face_clothes"/>

        <ImageView
            android:id="@+id/face"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_room_height"
            android:src="@drawable/face1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/faceLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_white_18dp" />

            <ImageButton
                android:id="@+id/faceRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_white_18dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout3"
        android:background="@drawable/round_rect_blue_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avatar_room_cloth"
            android:textColor="@color/powerup_black"
            android:textSize="@dimen/hair_eyes_face_clothes"/>

        <ImageView
            android:id="@+id/clothes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_room_height"
            android:src="@drawable/cloth1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/clotheLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_white_18dp" />

            <ImageButton
                android:id="@+id/clotheRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_white_18dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/continueButtonAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/relativeLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/relativeLayout2"
        android:layout_marginBottom="@dimen/continue_margin"
        android:layout_marginLeft="@dimen/margin_left_continue_button"
        android:background="@drawable/brown_button_background"
        android:text="@string/continue_text"
        android:textSize="@dimen/button_font"/>

</RelativeLayout>
