...
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                tools:ignore="UselessLeaf"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/continueButton"
        android:layout_width="@dimen/continue_width"
        android:layout_height="@dimen/continue_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/continue_marginBottom"
        android:alpha="0.9"
        android:background="@drawable/continue_button"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/final_avatar_back_button_margin_bottom"
...
