...
    <string name="preferences_has_previously_started">has_previously_started</string>
    <string name="preferences_has_previously_customized">has_previously_customized</string>
    <string name="avatar">"Here is your final Avatar!\nPress continue to start\n your journey.."</string>
    <string name="avatar_land">"Here is your final Avatar! Press continue to start\n your journey.."</string>
    <string name="select_feature_coins">"10 coins"</string>
    <string name="pgame_scenario_hint">"Scenario Name"</string>
    <string name="back_button"><b>"Back"</b></string>
    <string name="select_feature">"Choose your feature.."</string>
    <string name="from_activity">"fromActivity"</string>
    <string name="eye">"eyes"</string>
    <string name="hair">"Hair"</string>
    <string name="cloth">"dress_avatar"</string>
    <string name="lowercase_skin">"skin"</string>
...
